--- a/Preu_TopEducation_Ti/src/main/resources/application.properties
+++ b/Preu_TopEducation_Ti/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8090
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Preu_TopEducation
-spring.datasource.username=postgres
-spring.datasource.password=Aaldea1604
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.application.name=Preu_topEducacion
